<resources>
    <string name="app_name">GroceryStoreSystem-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="store_items">Store Items</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Delete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="street_name">Street Name</string>
    <string name="street_number">Street Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="store_name">Super Grocery</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="welcome">Welcome</string>



</resources>