<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="448dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintVertical_bias="0.296">

        <Button
            android:id="@+id/orders_button"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/orders"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/profile"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shop_button"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/shop"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cart_button"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/cart"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>