<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemViewList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreItems">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="125dp"
        android:layout_height="101dp"
        android:gravity="center"
        android:text="@string/item_name"
        android:textSize="20sp"
        tools:text="Apple" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:gravity="center"
        android:text="@string/item_price"
        android:textSize="20sp"
        tools:text="4.99$" />

    <Button
        android:id="@+id/add"
        android:layout_width="72dp"
        android:layout_height="wrap_content"

        android:contentDescription="@string/add_button"
        android:gravity="center"
        android:text="+"
        android:textSize="25dp"></Button>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:contentDescription="@string/remove_button"
        android:gravity="center"
        android:text="-"
        android:textSize="25dp"></Button>


</LinearLayout>