<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:text="@string/sign_up_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="152dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="158dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        android:autofillHints="" />

    <EditText
        android:id="@+id/city"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <EditText
        android:id="@+id/streetName"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/street_name"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <EditText
        android:id="@+id/streetNum"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/street_number"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <EditText
        android:id="@+id/country"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="27dp"
        android:text="@string/address_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <EditText
        android:id="@+id/password"
        android:layout_width="209dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <CheckBox
        android:id="@+id/isLocal"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:text="Is Local ?"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>