<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="276dp"
        android:layout_height="71dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        tools:text="Sign up " />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="152dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress6"
        android:layout_width="158dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.173" />

    <EditText
        android:id="@+id/editTextTextPostalAddress4"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/street_name"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.364"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPostalAddress5"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/street_number"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.591"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPostalAddress3"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.364"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.173"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="27dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.039"
        tools:text="Address" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

</androidx.constraintlayout.widget.ConstraintLayout>